--- a/RollGame/RollGame.vcxproj.filters
+++ b/RollGame/RollGame.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="RollGame.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="fileoperation.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
